# Torn-Apart

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DECISIONS.md  README.md  TODO.md  config.toml  main.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  vulture_whitelist.py
assets/buildings/: README.md
assets/prefabs/: README.md
docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  EDITOR_PRD.md  index.md
docs/content/: tree_species_authoring.md
docs/progression/: 01-foundations.md  02-light-and-sky.md  03-a-living-world.md  04-iteration-at-machine-speed.md  README.md
docs/sessions/: buildings-iteration-2.md  editor-iter3-handoff.md  flora-session.md  graphics-optimization-session.md  lighting-shimmer-gi-handoff.md  session-01.md  session-02.md  session-05-grass.md  standards-remediation-session.md  standards-remediation-spec.md  test-storm-findings.md  test-storm-import-fix.md  test-storm-matrix.md  test-storm-summary.md  tree-3d-session.md  tree-bush-iteration-2.md  wind-field-session.md
docs/systems/: _TEMPLATE.md  assets.md  buildings._impl.md  buildings.md  core._impl.md  core.md  devtools._tools.md  devtools.md  editor.md  editor_harness.md  lighting._impl.md  lighting.md  player.md  procedural.flora.md  procedural.flora.species.md  procedural.md  procedural.textures.ground.md  procedural.textures.md  procedural.textures.sky.md  procedural.textures.sprites.md  profiler.md  render._impl.md  render.bridges.md  render.md  render.overlay.md  render.sky._impl.md  render.sky.md  render.vegetation._impl.md  render.vegetation.md  resources.md  save.md  scene.md  simulation.ai.md  simulation.economy.md  simulation.md  simulation.player.md  simulation.politics.md  sky.md  standards.md  terrain.md  (+10 more)
editor/: README.md
editor/extension/: .vscodeignore  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json  tsconfig.webview.json
editor/fire_editor/: __init__.py  __main__.py  _generated.py  binary.py  client.py  commands.py  daemon.py  meshcodec.py  rpc.py  scene_objects.py  server.py  session.py  texturecodec.py
editor/protocol/: SCHEMA.md  codegen.py  schema.json
fire_engine/assets/: __init__.py  asset_file.py  blobs.py  constants.py  enums.py  prefab.py  types.py
fire_engine/buildings/: __init__.py  defs.py  enums.py  manager.py  meshing.py  model.py  occlusion.py  rooms.py  triangulate.py  types.py
fire_engine/core/: __init__.py  clock.py  config.py  event_bus.py  events.py  lod.py  log.py  math3d.py  profiler.py  rng.py  shader_source.py
fire_engine/devtools/: __init__.py  enums.py  fields.py  gizmo.py  introspect.py  manager.py  picking.py  selection.py  tools.py  types.py
fire_engine/lighting/: __init__.py  assembly_worker.py  exposure.py  glsl.py  gpu.py  light_grid.py  lights.py  occluders.py  palette.py  sunlight.py  volume.py
fire_engine/player/: __init__.py  fly_controller.py
fire_engine/procedural/: __init__.py  defs.py  maps.py  registry.py
fire_engine/render/: __init__.py  app.py  building_renderer.py  camera.py  component.py  devtools_overlay.py  enums.py  flora_renderer.py  flora_shaders.py  gameobject.py  geometry_bridge.py  grass_renderer.py  grass_shaders.py  lightning_renderer.py  mote_renderer.py  mote_shaders.py  post_process.py  post_shaders.py  primitives.py  profiler_bridge.py  profiler_overlay.py  rain_renderer.py  rain_shaders.py  registry.py  resource_adapter.py  scene_visuals.py  sky_renderer.py  sky_shaders.py  terrain_shader.py  texture_bridge.py  transform.py  tree_renderer.py  tree_shaders.py  types.py  weather_renderer.py  wind_debug.py  wind_renderer.py
fire_engine/resources/: __init__.py  loaders.py  manager.py  types.py
fire_engine/save/: __init__.py  _codec.py  save_manager.py  saveable.py  types.py
fire_engine/scene/: __init__.py  components.py  objects.py  runtime.py  types.py
fire_engine/simulation/: __init__.py
fire_engine/sky/: __init__.py  atmosphere.py  celestial.py  cloud_noise.py  sky_state.py  weather.py  weather_map_pack.py
fire_engine/terrain/: __init__.py  brush.py  chunk.py  chunk_manager.py  generation.py  meshing.py  rain_cover.py  raycast.py  surface_nets.py
fire_engine/weather/: __init__.py  bolt.py  cells.py  classify.py  clouds.py  humidity.py  lightning.py  synoptic.py  system.py  weather_map.py
fire_engine/wind/: __init__.py  debug.py  field.py  gusts.py  modifiers.py  venturi.py  worker.py
fire_engine/world/: __init__.py  app.py  building_renderer.py  building_shaders.py  camera.py  component.py  devtools_overlay.py  flora_renderer.py  flora_shaders.py  gameobject.py  geometry_bridge.py  grass_renderer.py  grass_shaders.py  lightning_renderer.py  lightning_shaders.py  mote_renderer.py  mote_shaders.py  post_process.py  post_shaders.py  primitives.py  rain_renderer.py  (+13 more)
tests/: __init__.py  conftest.py  test_assembly_worker.py  test_brush.py  test_buildings_defs.py  test_buildings_manager.py  test_buildings_meshing.py  test_buildings_model.py  test_buildings_rooms.py  test_buildings_triangulate.py  test_chunk_delta.py  test_chunk_manager_streaming.py  test_clock.py  test_cloud_noise.py  test_config_extra.py  test_devtools.py  test_devtools_gizmo.py  test_dynamic_lights.py  test_event_bus.py  test_event_bus_edges.py  test_exposure.py  test_flora.py  test_flora_atlas.py  test_flora_impostor.py  test_flora_leaves.py  test_flora_mesher_determinism.py  test_fly_controller.py  test_gameobject.py  test_graphics_config.py  test_grass_placement.py  test_ground_lut.py  test_lighting.py  test_lighting_exposure.py  test_lighting_volume.py  test_lit_surface.py  test_lod.py  test_log.py  test_math3d.py  test_math3d_boundaries.py  test_meshing_seams.py  (+57 more)
tools/: _gi_room_probe.py  _noise_probe.py  _smooth_smoke.py  _tree_geom_probe.py  check_docs.py  check_git_hygiene.py  check_repo_structure.py  dump_save.py  editor_client.py  light_probe.py  preview_texture.py  preview_tree.py  probe_grass_crater.py  profile_run.py  profile_stream.py  screenshot.py  shimmer_probe.py  standards_config.py  verify_weather.py
torn_apart/: __init__.py
(+549 files in other folders)
